--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -2,12 +2,12 @@
   "name": "challenge-developstoday",
   "version": "0.1.0",
   "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
+"scripts": {
+  "dev": "set PORT=3001 && next dev",
+  "build": "next build",
+  "start": "next start",
+  "lint": "next lint"
+},
   "dependencies": {
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
